@@ -54,6 +54,7 @@ Bug Fixes:
  -- wordpos() did not strip ansi before counting characters.
  -- Fix signed / unsigned warning in dump_info() (Issue 276).
  -- Corrected minor typo in @comon section of help.txt. (Issue 275)
+ -- Restore newline skipping in wrap(), broken in 2.7.0.2 (Issue 278).
 
 Performance Enhancements:
 ~~~~~~~~~~~~~~~~~~~~~~~~
